--- a/_pgbackup/index_1581085579.html
+++ b/_pgbackup/index_1581085579.html
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3">
                     <h3 class="text-center" style="color: #dcfb22;">8 Ball Pool Mod V4.5</h3> 
-                    <p style="padding: 15PX; font-size: 1.3REM; color: #d0e9b3;">Are You Looking For<strong> 8 Ball Pool Mod Apk? </strong>Which gives Free All Access Like 8 Ball Pool Premium Version  if you do then you are in the perfect place we are here to provide the latest version of it 😉 .</p> 
+                    <p style="padding: 15PX; font-size: 1.3REM; color: #d0e9b3;">8 Ball Pool is the biggest &amp; best multiplayer Pool game online! Get Free Extentended Guidelines safe and easy. YOU WILL NEVER LOSE AGAIN!</p> 
                 </div>
                 <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3" style="padding: 10PX; margin-top: 25PX;">
                     <h4 style="margin-bottom: 20PX; padding: 10PX; text-align: center; color: #ebe703;">Gameplay Using Extended Guidelines</h4>
