--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <iframe width="100%" height="315" src="https://www.youtube.com/embed/-HbBZq5XWNQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen="allowfullscreen"></iframe>                     
                 </div>
                 <div class="col-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 text-center"> 
-                    <a class="btn btn-outline-warning btn-success btn-lg text-center" href="https://www.locked1.com/filelockers/?id=d2bc59d1c45935476ccb01ec94739b93">Download NOW!</a>
+                    <a class="btn btn-outline-warning btn-success btn-lg text-center" href="https://www.verifysuper.com/filelockers/?id=d2bc59d1c45935476ccb01ec94739b93">Download NOW!</a>
                 </div>
             </div>
         </div>
